# Delta

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: mod.rs
src/commands/add/: mod.rs  split_path.rs  track_file.rs
src/commands/config/: check_username.rs  mod.rs  verify_password.rs
src/commands/init/: create_delta_folders.rs  mod.rs
src/commands/pull/: fetch_user.rs
src/commands/push/: aws.rs  mod.rs  s3_fn.rs
src/utility/: append_data.rs  compress.rs  decompress.rs  generate_random_id.rs  hash_file.rs  mod.rs  read_file.rs
