[package]
name = "delta"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.71.2"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = "0.4.40"
chrono-tz = "0.10.3"
dotenv = "0.15.0"
flate2 = "1.1.1"
fs = "0.0.5"
hex = "0.4.3"
mongodb = "3.2.3"
rand = "0.9.1"
serde = "1.0.219"
serde_dynamo = "4.2.14"
sha2 = "0.10.8"
tokio = "1.44.2"
walkdir = "2.5.0"
